// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With search Case custom search component 1`] = `
<Column>
  <UserSearch
    onChange={[Function]}
    searchIcon={undefined}
    searchPlaceholder="Search"
    value="1"
  />
  <Unknown
    calculatedHeight={50}
    filteredItems={
      Array [
        Object {
          "disabled": true,
          "id": 1,
          "label": "item-1",
        },
        Object {
          "disabled": false,
          "id": 2,
          "label": "item-2",
        },
        Object {
          "id": 3,
          "label": "item-3",
          "withGrouping": true,
        },
        Object {
          "id": 4,
          "label": "item-4",
        },
      ]
    }
    getList={[Function]}
    isAllSelected={false}
    itemHeight={50}
    itemRenderer={[Function]}
    listRenderer={[Function]}
    noItemsRenderer={false}
    selectAllHeight={400}
    selectAllItems={[Function]}
    selectAllRenderer={true}
    selectItem={[Function]}
    selectedIds={
      Array [
        1,
        2,
      ]
    }
    showSelectAll={true}
  />
</Column>
`;

exports[`With search Case default search component 1`] = `
<Column>
  <Search
    onChange={[Function]}
    searchIcon={[Function]}
    searchPlaceholder="Search"
    value={undefined}
  />
  <Unknown
    calculatedHeight={50}
    filteredItems={
      Array [
        Object {
          "disabled": true,
          "id": 1,
          "label": "item-1",
        },
        Object {
          "disabled": false,
          "id": 2,
          "label": "item-2",
        },
        Object {
          "id": 3,
          "label": "item-3",
          "withGrouping": true,
        },
        Object {
          "id": 4,
          "label": "item-4",
        },
      ]
    }
    getList={[Function]}
    isAllSelected={false}
    itemHeight={50}
    itemRenderer={[Function]}
    listRenderer={[Function]}
    noItemsRenderer={false}
    selectAllHeight={400}
    selectAllItems={[Function]}
    selectAllRenderer={true}
    selectItem={[Function]}
    selectedIds={
      Array [
        1,
        2,
      ]
    }
    showSelectAll={true}
  />
</Column>
`;

exports[`With search Case show search false 1`] = `
<Column>
  <Unknown
    calculatedHeight={50}
    filteredItems={
      Array [
        Object {
          "disabled": true,
          "id": 1,
          "label": "item-1",
        },
        Object {
          "disabled": false,
          "id": 2,
          "label": "item-2",
        },
        Object {
          "id": 3,
          "label": "item-3",
          "withGrouping": true,
        },
        Object {
          "id": 4,
          "label": "item-4",
        },
      ]
    }
    getList={[Function]}
    isAllSelected={false}
    itemHeight={50}
    itemRenderer={[Function]}
    listRenderer={[Function]}
    noItemsRenderer={false}
    selectAllHeight={400}
    selectAllItems={[Function]}
    selectAllRenderer={true}
    selectItem={[Function]}
    selectedIds={
      Array [
        1,
        2,
      ]
    }
    showSelectAll={true}
  />
</Column>
`;
